--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <div class="project-info">
                         <h3>Portfolio Website</h3>
                         <p>HTML, CSS, JS</p>
-                        <a href="file:///C:/Users/Mms/Desktop/personal%20portfolio/index.html" target="_blank">View Project</a>
+                        <a href="https://suvethaganapathi8754.github.io/my-portfolio/" target="_blank">View Project</a>
                     </div>
                 </div>
 
@@ -259,5 +259,6 @@
         ScrollReveal().reveal('.about-content', { origin: 'right', distance: '50px', duration: 1000, delay: 300 });
     </script>
 </body>
+
 
 </html>
