--- a/index.html
+++ b/index.html
@@ -199,7 +199,15 @@
                         <a href="https://suvethaganapathi8754.github.io/my-portfolio/" target="_blank">View Project</a>
                     </div>
                 </div>
-
+                <div class="project-card">
+                    <img src="Screenshot (64).png" alt="Project 3" />
+                    <div class="project-info">
+                        <h3>Go-X  Interview Assesment</h3>
+                        <p>Figma</p>
+                        <a href="https://www.figma.com/design/ncjwkJTrjPHVrwQjUIZHgx/Untitled?node-id=0-1&p=f&t=S7GfdXOlrLAnsJDP-0" target="_blank">View Project</a>
+                    </div>
+                </div>
+                
                 <!-- Add more cards if needed -->
             </div>
         </section>
@@ -262,3 +270,4 @@
 
 
 </html>
+
