--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="Screenshot (64).png" alt="Project 3" />
+                    <img src="Screenshot 2025-09-04 115444.png" alt="Project 3" />
                     <div class="project-info">
                         <h3>Go-X  Interview Assesment</h3>
                         <p>Figma</p>
@@ -270,4 +270,5 @@
 
 
 </html>
+
 
