--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     <div class="project-info">
                         <h3>Go-X  Interview Assesment</h3>
                         <p>Figma</p>
-                        <a href="https://www.figma.com/design/ncjwkJTrjPHVrwQjUIZHgx/Untitled?node-id=0-1&p=f&t=S7GfdXOlrLAnsJDP-0" target="_blank">View Project</a>
+                        <a href="https://www.figma.com/proto/ncjwkJTrjPHVrwQjUIZHgx/Untitled?node-id=1-2&p=f&t=AEn07xmQJJFTViwk-0&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1" target="_blank">View Project</a>
                     </div>
                 </div>
                 
@@ -270,5 +270,6 @@
 
 
 </html>
+
 
 
